kubernetes/apps/dozzle/dozzle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dozzle
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dozzle
  template:
    metadata:
      labels:
        app: dozzle
    spec:
      serviceAccountName: dozzle-sa
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: dozzle
          image: docker.io/amir20/dozzle:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
              name: http
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dozzle-service
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8888
      protocol: TCP
  selector:
    app: dozzle
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: logs.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle-service
                port:
                  number: 8080
